fix: Fixing layout using CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <nav> Portal de notícias
+  <div class="container">
+  <nav class="header-container" > Portal de notícias
     <dl> 
     <dt>
      <a href="#esportes" title="Ir para a seção de esportes">Esportes</a>
@@ -23,11 +24,14 @@
     </dt>
     </dl>
   </nav>
+</div>
+</div>
 <main>
-<section id="esportes" class="esportes-section">Esportes
+  <div class="container">
+<section id="esportes" class="esportes-section"><h2>Esportes</h2>
   <div class="esportes-container">
 <article>
-<img src ="../modulo4/img/esportes1.jpg" alt="esportes"> 
+<img class="icons-img"  src ="img/esportes1.jpg" alt="esportes"> 
 <header>
 <time>02/06/2023</time>
 </header>
@@ -36,7 +40,7 @@
 <button class="button-esportes">Ler Mais</button>
 </article>
 <article>
-  <img src ="../modulo4/img/esportes2.jpg" alt="esportes"> 
+  <img class="icons-img" src ="img/esportes2.jpg" alt="esportes"> 
   <header>
   <time>02/06/2023</time>
   </header>
@@ -45,7 +49,7 @@
   <button class="button-esportes">Ler Mais</button>
   </article>
   <article>
-    <img src ="../modulo4/img/esportes3.jpg" alt="esportes"> 
+    <img class="icons-img" src ="img/esportes3.jpg" alt="esportes"> 
     <header>
     <time>02/06/2023</time>
     </header>
@@ -54,7 +58,7 @@
     <button class="button-esportes">Ler Mais</button>
     </article>
 <article>
-<img src ="../modulo4/img/esportes4.jpg" alt="esportes"> 
+<img class="icons-img" src ="img/esportes4.jpg" alt="esportes"> 
 <header>
 <time>02/06/2023</time>
 </header>
@@ -63,11 +67,13 @@
 <button class="button-esportes">Ler Mais</button>
 </article>
 </div>
+</div>
+<div class="container">
 </section>
-<section id="economia" class="economia-section"> Economia
+<section id="economia" class="economia-section"><h2>Economia</h2>
   <div class="economia-container">
 <article>
-<img src ="../modulo4/img/economia1.jpg" alt="economia"> 
+<img class="icons-img" src ="img/economia1.jpg" alt="economia"> 
 <header>
 <time>02/06/2023</time>
 </header>
@@ -76,7 +82,7 @@
 <button class="button-economia">Ler Mais</button>
 </article>
 <article class="economia-articles">
-  <img src ="../modulo4/img/economia2.jpg" alt="economia"> 
+  <img  src ="img/economia2.jpg" alt="economia"> 
   <header>
   <time>02/06/2023</time>
   </header>
@@ -85,7 +91,7 @@
   <button class="button-economia">Ler Mais</button>
   </article>
 <article class="economia-articles">
-<img src ="../modulo4/img/economia3.jpg" alt="economia"> 
+<img class="icons-img" src ="img/economia3.jpg" alt="economia"> 
 <header>
 <time>02/06/2023</time>
 </header>
@@ -95,10 +101,12 @@
 </article>
 </div>
 </section>
-<section id="tecnologia" class="tecnologia-section">Tecnologia
+</div>
+<div class="container">
+<section id="tecnologia" class="tecnologia-section"><h2>Tecnologia</h2>
   <div class="tecnologia-container">
   <article>
-  <img src ="../modulo4/img/tecnologia1.jpg" alt="tecnologia"> 
+  <img class="icons-img" src ="img/tecnologia1.jpg" alt="tecnologia"> 
   <header>
   <time>02/06/2023</time>
   </header>
@@ -107,7 +115,7 @@
   <button class="button-tecnologia">Ler Mais</button>
   </article>
   <article>
-    <img src ="../modulo4/img/tecnologia2.jpg" alt="tecnologia"> 
+    <img class="icons-img" src ="img/tecnologia2.jpg" alt="tecnologia"> 
     <header>
     <time>02/06/2023</time>
     </header>
@@ -116,7 +124,7 @@
     <button class="button-tecnologia">Ler Mais</button>
     </article>
     <article>
-      <img src ="../modulo4/img/tecnologia3.jpg" alt="tecnologia"> 
+      <img class="icons-img" src ="img/tecnologia3.jpg" alt="tecnologia"> 
       <header>
       <time>02/06/2023</time>
       </header>
@@ -125,7 +133,7 @@
       <button class="button-tecnologia">Ler Mais</button>
       </article>
   <article>
-  <img src ="../modulo4/img/tecnologia4.jpg" alt="tecnologia"> 
+  <img class="icons-img" src ="img/tecnologia4.jpg" alt="tecnologia"> 
   <header>
   <time>02/06/2023</time>
   </header>
@@ -134,11 +142,13 @@
   <button class="button-tecnologia">Ler Mais</button>
   </article>
 </div>
+</div>
+<div class="container">
   </section>
-  <section id="entretenimento"class="entretenimento-section">Entretenimento
+  <section id="entretenimento"class="entretenimento-section"><h2>Entretenimento</h2>
     <div class="entretenimento-container">
     <article>
-    <img src ="../modulo4/img/entretenimento1.jpg" alt="entretenimento"> 
+    <img class="icons-img" src ="img/entretenimento1.jpg" alt="entretenimento"> 
     <header>
     <time>02/06/2023</time>
     </header>
@@ -147,7 +157,7 @@
     <button class="button-entretenimento">Ler Mais</button>
     </article>
     <article>
-      <img src ="../modulo4/img/entretenimento2.jpg" alt="entretenimento"> 
+      <img class="icons-img" src ="img/entretenimento2.jpg" alt="entretenimento"> 
       <header>
       <time>02/06/2023</time>
       </header>
@@ -156,7 +166,7 @@
       <button class="button-entretenimento">Ler Mais</button>
       </article>
       <article>
-        <img src ="../modulo4/img/entretenimento3.jpg" alt="entretenimento"> 
+        <img class="icons-img" src ="img/entretenimento3.jpg" alt="entretenimento"> 
         <header>
         <time>02/06/2023</time>
         </header>
@@ -165,7 +175,7 @@
         <button class="button-entretenimento">Ler Mais</button>
         </article>
     <article>
-    <img src ="../modulo4/img/entretenimento4.jpg" alt="entretenimento"> 
+    <img class="icons-img" src ="img/entretenimento4.jpg" alt="entretenimento"> 
     <header>
     <time>02/06/2023</time>
     </header>
@@ -175,7 +185,7 @@
     </article>
   </div>
     </section>
-    
+  </div>
 </main>
 </body>
 </html>
